# aiodatalite

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: python-publish.yml  test_ci.yml
aiodatalite/: datalite_decorator.py
datalite/: commons.py  constraints.py  datalite_decorator.py  fetch.py  mass_actions.py
docs/: aiodatalite.rst  conf.py  constraints.rst  decorator.rst  fetch.rst  index.rst  installation.rst  migration.rst  requirements.txt
test/: main_tests.py
