[tool.poetry]
name = "aiodatalite"
version = "1.0.0"
description = "A simple Python library to bind dataclasses with databases. Now asynchronous!"
authors = ["hhh <shshshsh@horsefucker.org>", "Ege Ozkan <egeemirozkan24@gmail.com>"]
documentation = "https://aiodatalite.readthedocs.io"
repository = "https://github.com/kotikotprojects/aiodatalite"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.9"
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
